--- a/src/app/event/contest/contest.component.html
+++ b/src/app/event/contest/contest.component.html
@@ -7,6 +7,6 @@
         <p>{{ event.venue }}</p>
         <p>{{ event.description }}</p>
     </div>
-    <button (click)="register(event.link)">Go to Register</button>
+    <button class="glass-button" (click)="register(event.link)">Go to Register</button>
     </div>
   </div>
