--- a/src/app/event/event/event.component.html
+++ b/src/app/event/event/event.component.html
@@ -10,7 +10,7 @@
             <button
             (click)="goto('events/hackathon')"
             class="animated-button" 
-            icon="pi pi-check">Visit</button>
+            icon="pi pi-check">Coming Soon</button>
         </ng-template>
     </p-card>
 
@@ -19,13 +19,13 @@
             <img alt="Card" src="/assets/images/contest.jpg" />
         </ng-template>
         <p>
-          Exotic hackathons organized by Drive Blaze
+          
         </p>
         <ng-template pTemplate="footer">
             <button
             (click)="goto('/events/contest')"
             class="animated-button" 
-            icon="pi pi-check">Visit</button>
+            icon="pi pi-check">Coming Soon</button>
         </ng-template>
     </p-card>
 
@@ -35,13 +35,13 @@
             <img alt="Card" src="/assets/images/techtalk.jpg" />
         </ng-template>
         <p>
-          Exotic hackathons organized by Drive Blaze
+         
         </p>
         <ng-template pTemplate="footer">
             <button
             (click)="goto('/tech-talks')"
             class="animated-button" 
-            icon="pi pi-check">Visit</button>
+            icon="pi pi-check">Coming Soon</button>
         </ng-template>
     </p-card>
 
@@ -51,12 +51,12 @@
             <img alt="Card" src="/assets/images/workshop.jpg" />
         </ng-template>
         <p>
-          Exotic hackathons organized by Drive Blaze
+          
         </p>
         <ng-template pTemplate="footer">
             <button
             class="animated-button" 
-            icon="pi pi-check">Visit</button>
+            icon="pi pi-check">Coming soon</button>
         </ng-template>
     </p-card>
 </div>
