--- a/src/app/schedule/schedule/schedule.component.css
+++ b/src/app/schedule/schedule/schedule.component.css
@@ -1,88 +1,90 @@
 .schedule-container {
-    display: flex;
-    justify-content: space-around;
-    padding: 20px;
-    height: 500px; /* Adjust height as needed */
-  }
-  
-  .schedule-day {
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 15px;
-    padding: 20px;
-    width: 45%;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    overflow-y: auto; /* Makes the div scrollable */
-    max-height: 100%; /* Ensures it uses the full container height */
-  }
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
+  height: 500px; /* Adjust height as needed */
+  transform: translate(-50%,-50%);
+}
 
-  
-  .schedule-day h2 {
-    color: #fff;
-    text-align: center;
-    margin-bottom: 20px;
-    position: sticky;
-    top: 0;
-    background: rgba(255, 255, 255, 0.1);
-    padding: 10px 0;
-    z-index: 1;
-  }
-  
+.schedule-day {
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 15px;
+  padding: 20px;
+  margin: 12px;
+  width: 50%;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  overflow-y: auto; /* Makes the div scrollable */
+  max-height: 100%; /* Ensures it uses the full container height */
+}
 
-  .schedule-day::-webkit-scrollbar {
-    width: 2px;
-  }
-  .event {
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 10px;
-    padding: 15px;
-    margin-bottom: 15px;
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-  }
-  
-  .event:hover {
-    transform: scale(1.05);
-  }
-  
-  .event::before {
-    content: '';
-    position: absolute;
-    top: -100%;
-    left: -100%;
-    width: 200%;
-    height: 200%;
-    background: linear-gradient(
-      to right,
-      rgba(255, 255, 255, 0.2) 0%,
-      rgba(255, 255, 255, 0.8) 50%,
-      rgba(255, 255, 255, 0.2) 100%
-    );
-    transform: rotate(45deg);
-    transition: all 0.3s ease;
-  }
-  
-  .event:hover::before {
-    top: 0;
-    left: 100%;
-    transition: all 0.5s ease;
-  }
-  
-  .event h3 {
-    margin: 0 0 10px 0;
-    color: #fff;
-  }
-  
-  .event p {
-    margin: 0;
-    color: #ddd;
-  }
-  
+.schedule-day h2 {
+  color: #fff;
+  text-align: center;
+  margin-bottom: 20px;
+  position: sticky;
+  top: 0;
+  background: rgba(255, 255, 255, 0.1);
+  padding: 10px 0;
+  z-index: 1;
+}
+
+.schedule-day::-webkit-scrollbar {
+  width: 2px;
+}
+.event {
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+  padding: 15px;
+  margin-bottom: 15px;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.event:hover {
+  transform: scale(1.05);
+}
+
+.event::before {
+  content: "";
+  position: absolute;
+  top: -100%;
+  left: -100%;
+  width: 200%;
+  height: 200%;
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.2) 0%,
+    rgba(255, 255, 255, 0.8) 50%,
+    rgba(255, 255, 255, 0.2) 100%
+  );
+  transform: rotate(45deg);
+  transition: all 0.3s ease;
+}
+
+.event:hover::before {
+  top: 0;
+  left: 100%;
+  transition: all 0.5s ease;
+}
+
+.event h3 {
+  margin: 0 0 10px 0;
+  color: #fff;
+}
+
+.event p {
+  margin: 0;
+  color: #ddd;
+}
