--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,8 +22,14 @@
 </ng-template>
 
 <app-video-background>
-  <app-navbar></app-navbar>
-  <main>
+  
+
+
+  <app-navbar class="main-content"></app-navbar>
+  <main class="main-content">
+    <div class="coming-soon" style="display: none;">
+      <h1 style="color: white;">Coming Soon</h1>
+    </div>
     <div class="route-point">
       <div class="golden-circle" #circle></div>
       <div class="golden-circle" #circle></div>
@@ -39,4 +45,4 @@
     </div>
 </main>
 </app-video-background>
-<app-footer></app-footer>
+<app-footer class="main-content"></app-footer>
