--- a/src/app/event/profile/profile.component.css
+++ b/src/app/event/profile/profile.component.css
@@ -373,6 +373,35 @@
   align-items: center;
 }
 
+.already-submitted{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.already-submitted > h2{
+  font-style: normal;
+  font-weight: normal;
+  text-align: center;
+  margin-bottom: 12px;
+  margin-top: 12px;
+}
+
+.already-submitted > a{
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  transition: all 0.5s ease-in;
+  border: 0.3px solid silver;
+}
+
+.already-submitted > a:hover{
+  transform: scale(1.1);
+}
+
 .over-view {
   background: rgba(255, 255, 255, 0.1); /* Semi-transparent white background */
   border-radius: 15px;
